# TheAgent

./: .gitignore  .theagent.toml.example  CHANGELOG.md  LICENSE  README.md  debug_flow_structure.py  flow.py  main.py  nodes.py  pyproject.toml  requirements.txt  script.py  test_script.py
.github/workflows/: ci.yml
docs/: design.md  design_.md  implementation.md  plan.md  project.md  requirements.md  roadmap.md
src/theagent/: __main__.py  chat_history.py  flow.py  main.py  nodes.py  script.py
src/theagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/theagent/providers/: anthropic_provider.py  google_provider.py  llm_base.py  ollama_provider.py  openai_provider.py
src/theagent/utils/: __init__.py  call_llm.py  utils.py  visualize_flow.py
test_demo/: main.py  utils.py
tests/: conftest.py  test_agent_nodes_comprehensive.py  test_agents.py  test_call_llm.py
utils/: call_llm.py
